version/stable/_sources/api/ansys/mechanical/stubs/v241/Ansys/Mechanical/ExternalData/ExternalDataFileCollection.rst.txt
.. vale off



:class:`ExternalDataFileCollection`
===================================

.. py:class:: ansys.mechanical.stubs.v241.Ansys.Mechanical.ExternalData.ExternalDataFileCollection

   Bases: :py:obj:`object`


   
   T:Ansys.Mechanical.ExternalData.ExternalDataFileCollection is a class that provides foundational behavior for
   holding external data files.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: ExternalDataFileCollection

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Add`
            - 
          * - :py:attr:`~Clear`
            - 
          * - :py:attr:`~Contains`
            - 
          * - :py:attr:`~CopyTo`
            - CopyTo method.
          * - :py:attr:`~GetEnumerator`
            - 
          * - :py:attr:`~IndexOf`
            - 
          * - :py:attr:`~Insert`
            - 
          * - :py:attr:`~Remove`
            - 
          * - :py:attr:`~RemoveAt`
            - 


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Count`
            - Gets the number of external data files.
          * - :py:attr:`~Item`
            - Item property.
          * - :py:attr:`~SaveFilesWithProject`
            - Gets or sets the flag controlling if the external data files will be copied to the project directory.







Property detail
---------------
.. py:property:: Count
   :type: Optional[int]


   
   Gets the number of external data files.
















   ..
       !! processed by numpydoc !!

.. py:property:: Item
   :type: Optional[Ansys.Mechanical.ExternalData.ExternalDataFile]


   
   Item property.
















   ..
       !! processed by numpydoc !!

.. py:property:: SaveFilesWithProject
   :type: Optional[bool]


   
   Gets or sets the flag controlling if the external data files will be copied to the project directory. 
   If this flag is set to False, the external data files will directly reference the file path. 
   The default is False. 
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Add(item: Ansys.Mechanical.ExternalData.ExternalDataFile) -> None
   

.. py:method:: Clear() -> None
   

.. py:method:: Contains(item: Ansys.Mechanical.ExternalData.ExternalDataFile) -> bool
   

.. py:method:: CopyTo(array: Ansys.Mechanical.ExternalData.ExternalDataFile, arrayIndex: int) -> None

   
   CopyTo method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetEnumerator() -> Iterator[Ansys.Mechanical.ExternalData.ExternalDataFile]
   

.. py:method:: IndexOf(item: Ansys.Mechanical.ExternalData.ExternalDataFile) -> int
   

.. py:method:: Insert(index: int, item: Ansys.Mechanical.ExternalData.ExternalDataFile) -> None
   

.. py:method:: Remove(item: Ansys.Mechanical.ExternalData.ExternalDataFile) -> bool
   

.. py:method:: RemoveAt(index: int) -> None
   



.. vale on