version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/Mechanical/ExternalData/ExternalDataFileCollection.rst.txt
.. vale off



:class:`ExternalDataFileCollection`
===================================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.Mechanical.ExternalData.ExternalDataFileCollection(saveFilesWithProject: bool)

   Bases: :py:obj:`object`


   
    is a class that provides foundational behavior for
   holding external data files.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: ExternalDataFileCollection

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Add`
            - 
          * - :py:attr:`~Clear`
            - 
          * - :py:attr:`~Contains`
            - 
          * - :py:attr:`~CopyTo`
            - CopyTo method.
          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetEnumerator`
            - 
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~IndexOf`
            - 
          * - :py:attr:`~Insert`
            - 
          * - :py:attr:`~Remove`
            - 
          * - :py:attr:`~RemoveAt`
            - 
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Count`
            - Gets the number of external data files.
          * - :py:attr:`~IsReadOnly`
            - 
          * - :py:attr:`~Item`
            - Item property.
          * - :py:attr:`~SaveFilesWithProject`
            - Gets or sets the flag controlling if the external data files will be copied to the project directory.







Property detail
---------------
.. py:property:: Count
   :type: Optional[int]


   
   Gets the number of external data files.
















   ..
       !! processed by numpydoc !!

.. py:property:: IsReadOnly
   :type: Optional[bool]


.. py:property:: Item
   :type: Optional[Ansys.Mechanical.ExternalData.ExternalDataFile]


   
   Item property.
















   ..
       !! processed by numpydoc !!

.. py:property:: SaveFilesWithProject
   :type: Optional[bool]


   
   Gets or sets the flag controlling if the external data files will be copied to the project directory. 
   If this flag is set to False, the external data files will directly reference the file path. 
   The default is False. 
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Add(item: Ansys.Mechanical.ExternalData.ExternalDataFile) -> None
   

.. py:method:: Clear() -> None
   

.. py:method:: Contains(item: Ansys.Mechanical.ExternalData.ExternalDataFile) -> bool
   

.. py:method:: CopyTo(array: Ansys.Mechanical.ExternalData.ExternalDataFile, arrayIndex: int) -> None

   
   CopyTo method.

   ..
       !! processed by numpydoc !!

.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetEnumerator() -> Iterator[Ansys.Mechanical.ExternalData.ExternalDataFile]
   

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: IndexOf(item: Ansys.Mechanical.ExternalData.ExternalDataFile) -> int
   

.. py:method:: Insert(index: int, item: Ansys.Mechanical.ExternalData.ExternalDataFile) -> None
   

.. py:method:: Remove(item: Ansys.Mechanical.ExternalData.ExternalDataFile) -> bool
   

.. py:method:: RemoveAt(index: int) -> None
   

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on